--- a/src/app/base/less/base.less
+++ b/src/app/base/less/base.less
@@ -83,7 +83,7 @@ body, .container-fluid.home-template, .header, .footer, .buildOrder-plp, .custom
 	right:0;
 	top:0;
 	width:@width3;
-	z-index:9998;
+	z-index:9997;
 	.row {
 		height:auto;
 		width:@width3;
@@ -537,6 +537,7 @@ input[type=number]::-webkit-outer-spin-button {
 			float:right;
 			font-size: 16px;
 			color: #8c58b5;
+			.helvetica-regular;
 			&:hover{
 				text-decoration-color:#8c58b5;
 			}
@@ -545,7 +546,7 @@ input[type=number]::-webkit-outer-spin-button {
 	  padding:0;
 	  margin-top:20px;
 		button{
-		    font-family: "Helvetica-Bold";
+		   .helvetica-bold;
 		    font-size: 16px;
 		    color: #8c58b5;
 		    border: 1px solid #8c58b5;
@@ -1786,7 +1787,7 @@ input[type=number]::-webkit-outer-spin-button {
 .checkbox-custom-label{
     position: relative;
     font-size: 12px;
-    font-family: "Helvetica Medium";
+    .helvetica-medium;
     color: #6c707a;
  
 }
@@ -1848,7 +1849,7 @@ input[type=number]::-webkit-outer-spin-button {
 
 
 .back-common{
-	font-family: "Helvetica-regular";
+    .helvetica-regular;
     font-size: 14px;
     color: #54565d;
     margin: 10px 0;
@@ -1887,7 +1888,7 @@ input[type=number]::-webkit-outer-spin-button {
 	color:#f32929;
 	margin:2px 0px;
 	font-size:12px;
-	  font-family: "helvetica-regular";
+	  .helvetica-regular;
 }
 .purple-btn {
     background-color: #a576ca;
