--- a/src/app/base/templates/base.top.tpl.html
+++ b/src/app/base/templates/base.top.tpl.html
@@ -15,10 +15,10 @@
 							<a class="maincat_link" ng-class="{'category-arw': categories.ChildCount}" ng-mouseover="baseTop.page = 1">{{categories.Name}}</a>
 							<ul class="menu_level_2" ng-if="categories.ChildCount">
 								<li ng-repeat="subcategories in categories.children track by $index" ng-if="((categories.ID =='c1') && ((subcategories.xp.StartDate| date:'MM/dd') < (application.cstTime| date:'MM/dd')) && ((subcategories.xp.EndDate| date:'MM/dd') > (application.cstTime| date:'MM/dd')) && ($index < (baseTop.page * baseTop.numRecords)) && ($index >= ((baseTop.page - 1) * baseTop.numRecords)))">
-									<a ui-sref="plp({ID:subcategories.ID,childCount:subcategories.ChildCount})" ng-mouseover="baseTop.page2 = 1" ng-class="{'category-arw': subcategories.ChildCount}" class="submaincat_link">{{subcategories.Name}}</a>
+									<a ng-mouseover="baseTop.page2 = 1" ng-class="{'category-arw': subcategories.ChildCount}" class="submaincat_link">{{subcategories.Name}}</a>
 									<ul class="menu_level_3" ng-if="subcategories.ChildCount">
 										<li ng-repeat="subchildcategories in subcategories.children track by $index" ng-if="($index < (baseTop.page2 * baseTop.numRecords)) && ($index >= ((baseTop.page2 - 1) * baseTop.numRecords)) ">
-											<a ui-sref="buildOrder({ID:subchildcategories.ID,SearchType:'plp'})" ng-click="base.isopen=false">{{baseTop.page2}}{{baseTop.numRecords}}{{subchildcategories.Name}}</a>	 
+											<a ui-sref="buildOrder({ID:subchildcategories.ID,SearchType:'plp'})" ng-click="base.isopen=false">{{subchildcategories.Name}}</a>	 
 										</li>
 									</ul> 
 								</li>
@@ -38,8 +38,8 @@
 										</g>
 									</svg>
 								</button>
-								<li ng-repeat="subcategories in categories.children track by $index" ng-if="(($index < (baseTop.page * baseTop.numRecords)) && ($index >= ((baseTop.page - 1) * baseTop.numRecords)) && categories.ID !='c1')">
-									<a ui-sref="plp({ID:subcategories.ID,childCount:subcategories.ChildCount})" ng-mouseover="baseTop.page2 = 1" ng-class="{'category-arw': subcategories.ChildCount}" class="submaincat_link">{{subcategories.Name}}</a>
+								<li ng-repeat="subcategories in categories.children track by $index" ng-if="(($index < (baseTop.page * baseTop.numRecords)) && ($index >= ((baseTop.page - 1) * baseTop.numRecords)) && categories.ID !='c1' && categories.ID !='WorkshopsEvents')">
+									<a ng-mouseover="baseTop.page2 = 1" ng-class="{'category-arw': subcategories.ChildCount}" class="submaincat_link">{{subcategories.Name}}</a>
 									<ul class="menu_level_3" ng-if="subcategories.ChildCount">
 										<button class="up-arrow" ng-click="baseTop.back2()" ng-show="baseTop.numRecords < (baseTop.page2 * baseTop.numRecords)">
 											<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -60,6 +60,15 @@
 												</g>
 											</svg>
 										</button>
+									</ul> 
+								</li>
+								<!-- workshop events -->
+								<li ng-repeat="subcategories in categories.children track by $index" ng-if="(($index < (baseTop.page2 * baseTop.numRecords)) && ($index >= ((baseTop.page2 - 1) * baseTop.numRecords)) && categories.ID =='WorkshopsEvents')">
+									<a ng-mouseover="baseTop.page2 = 1" ng-class="{'category-arw': subcategories.ChildCount}" class="submaincat_link">{{subcategories.Name}}</a>
+									<ul class="menu_level_3" ng-if="subcategories.ChildCount">
+										<li ng-repeat="subchildcategories in subcategories.children track by $index" ng-if="($index < (baseTop.page2 * baseTop.numRecords)) && ($index >= ((baseTop.page2 - 1) * baseTop.numRecords)) ">
+											<a ui-sref="buildOrder({ID:subchildcategories.ID,SearchType:'elp', catName:subchildcategories.Name})" ng-click="base.isopen=false">{{subchildcategories.Name}}</a>	 
+										</li>
 									</ul> 
 								</li>
 							</ul>
