--- a/src/app/buildOrder/templates/buildOrder.right.tpl.html
+++ b/src/app/buildOrder/templates/buildOrder.right.tpl.html
@@ -503,13 +503,13 @@
 												<h3>Add Card Message</h3>
 											</div>
 											<p>Line 1</p>
-											<input type="text" ng-model="lineitem.xp.CardMessage.line1" ng-blur="buildOrderRight.DtlsAutoPopulate(lineitem)" />
+											<input type="text" maxlength="40" spellcheck="true" ng-model="lineitem.xp.CardMessage.line1" ng-blur="buildOrderRight.DtlsAutoPopulate(lineitem)" />
 											<p>Line 2</p>
-											<input type="text" ng-model="lineitem.xp.CardMessage.line2" ng-blur="buildOrderRight.DtlsAutoPopulate(lineitem)" />
+											<input type="text" maxlength="40" spellcheck="true" ng-model="lineitem.xp.CardMessage.line2" ng-blur="buildOrderRight.DtlsAutoPopulate(lineitem)" />
 											<p>Line 3</p>
-											<input type="text" ng-model="lineitem.xp.CardMessage.line3" ng-blur="buildOrderRight.DtlsAutoPopulate(lineitem)" />
+											<input type="text" maxlength="40" spellcheck="true" ng-model="lineitem.xp.CardMessage.line3" ng-blur="buildOrderRight.DtlsAutoPopulate(lineitem)" />
 											<p>Line 4</p>
-											<input type="text" ng-model="lineitem.xp.CardMessage.line4" ng-blur="buildOrderRight.DtlsAutoPopulate(lineitem)" />
+											<input type="text" maxlength="40" spellcheck="true" ng-model="lineitem.xp.CardMessage.line4" ng-blur="buildOrderRight.DtlsAutoPopulate(lineitem)" />
 										</div>
 									</div>	
 								</div>
