--- a/src/app/checkout/less/checkout.less
+++ b/src/app/checkout/less/checkout.less
@@ -894,6 +894,9 @@ input.error, .errorMMyy {
 							background-color:@primary-dark-color;
 						}
 				}
+				#nextrecipient{
+				 font-size:16px;
+				}
 			}
 			.page_header_back{
 					margin-left: 15px;
