--- a/src/app/buildOrder/less/buildOrder.less
+++ b/src/app/buildOrder/less/buildOrder.less
@@ -6,6 +6,7 @@
   -webkit-transform: translate(-50%, -50%) !important;
   width:50% !important;
   left: 50%;
+  margin:0 !important;
 }
 
 .modal-body {
@@ -55,7 +56,7 @@ input.error, .errorCity {
 }
 .buildOrderPlp-main{
 	h1{
-		font-size: 30px;
+		font-size: 20px;
 		margin:0px 0 20px;
 		color:@color1;
 		.helvetica-regular;
@@ -480,6 +481,7 @@ input.error, .errorCity {
 						}
 					}
 					.productdescp {
+						margin-bottom:20px;
 						.title {
 							.helvetica-bold;
 							color: #8c58b5;
@@ -512,6 +514,7 @@ input.error, .errorCity {
 					}
 				}
 				.pdp-right {
+					padding-right:0;
 					h2 {
 						.helvetica-bold;
 						font-size: 20px;
@@ -527,7 +530,7 @@ input.error, .errorCity {
 					
 					}
 					button.addCart {
-						padding: 10px 45px 6px 45px;
+						    padding: 10px 45px 10px 45px;
 						background-color: @color15;
 						.helvetica-bold;
 						font-size: 14px ;
@@ -685,6 +688,27 @@ input.error, .errorCity {
 					 	}
 					 }
 					 .workshop-events{
+					 		.workshop-cont{
+						 		   border-top: 1px solid #f2f5f7;
+   									border-bottom: 1px solid #f2f5f7;
+    								padding: 20px 0px;
+    								width:100%;
+    								float:left;
+						 		.workshop-del{
+									font-size:15px;
+									.helvetica-regular;
+									p{
+										margin:0;
+									}
+									div{
+										padding:0px;
+									}
+									.workshop-addr{
+										.helvetica-bold;
+										
+									}
+								 }
+						 	}
 							.prod-price{
 								color:#333333;
 								font-size:20px;
@@ -1176,6 +1200,9 @@ input.error, .errorCity {
 				margin-top:10px;
 				text-transform: capitalize;
 			}
+			p{
+				.helvetica-regular;
+			}
 			.order-header {
 				background: #fff;
 				padding: 12px 15px;
@@ -1458,6 +1485,26 @@ input.error, .errorCity {
 									margin: 0 !important;
 								}
 							}
+							.popover{
+								width:17%;
+								left: 172px !important;
+								.popover-inner{
+									.popover-content{
+										button{
+										    font-family: 'ProximaNova-Bold';
+											font-size: 10px;
+											color: #ffffff;
+											background-color: #a576ca !important;
+											padding: 5px 10px 5px 10px;
+											margin-right: 8px;
+											background:fade;
+											&:hover{
+												background-color:#8c58b5 !important;
+											}
+										}
+									}
+								}
+							}
 						}
 						&:nth-child(odd) {
 							background: #f7f8fa;
@@ -1715,7 +1762,6 @@ input.error, .errorCity {
 						    margin-left: 4px;
 						&:first-letter{
 							text-transform:uppercase;
-
 						}
 					}
 				}
@@ -1823,11 +1869,7 @@ input.error, .errorCity {
 			.collapse{
  				transition:5s linear all !important;
 			}
-			.panel-open {
-				.panel-heading {
-					background-color: #ccc;
-				}
-			}
+			
 			.panel-heading {
 				background-color: @color11;
 				padding: 0;
@@ -3250,7 +3292,7 @@ input.error, .errorCity {
 		    					text-decoration: none;
 		    					color: #fff;
 		    					padding:7px 0 0 0;
-		    					width: 19%;
+		    					width: 20%;
 		    					margin-left: 2%;
 								color:#000;
 								border-bottom: 1px solid #000;
@@ -3427,6 +3469,7 @@ input.error, .errorCity {
 		  	 }
 		  	  .default-pay{
 		  	 	vertical-align:top;
+		  	 	padding-left:5px;
 			  }
 		  	 .assembled{
 		  	 	padding-left:5px;
@@ -3452,6 +3495,8 @@ input.error, .errorCity {
 			   }
 			   .default-pay{
 			   		vertical-align:top;
+			   		padding-left:5px;
+
 			   	 }
 			   .assembled{
 			   	  padding-left:5px;
@@ -4185,6 +4230,7 @@ input.error, .errorCity {
 					font-weight: bold;
 					display: inline-block;
 					font-size: 20px;
+					margin: 0 0 27px 0
 				}
 				.price {
 					.helvetica-medium;
