--- a/src/app/buildOrder/templates/buildOrder.pdp.tpl.html
+++ b/src/app/buildOrder/templates/buildOrder.pdp.tpl.html
@@ -51,7 +51,7 @@
 					</div>
 				</div>
 				<div class="pdp-right col-md-5 col-lg-5">
-					<div ng-if="buildOrder.hidePdpblock==false">
+					<div ng-if="!buildOrder.IsWorkShopEvent">
 					<h2 ng-init="sizeval=''">{{buildOrder.productTitle | lowercase}}</h2>
 					<h5 ng-if="buildOrder.allSizes[0].xp.SpecsOptions.Size !== null">Type</h5> 
 					<div class="radio-btn-container">
@@ -84,14 +84,52 @@
 						</div>
 					</div>
 					</div>
-					<div class="workshop-events" ng-if="buildOrder.hidePdpblock">	
+					<div class="workshop-events" ng-if="buildOrder.IsWorkShopEvent">	
 						<h2>{{buildOrder.productTitle}}</h2>
+						<div class="workshop-cont">
+							<div class="workshop-del">
+							<div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 workshop-addr">
+								Location:
+							</div>
+							<div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
+								  <p>{{buildOrder.location.Street1}}</p>
+								   <p>{{buildOrder.location.Street2}}</p>
+								   <p>{{buildOrder.location.City}}, {{buildOrder.location.State}}, {{buildOrder.location.Country}}, {{buildOrder.location.Zip}}</p>
+							</div>								   
+							</div>
+							<div class="workshop-del"> 
+								<div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 workshop-addr">Room Name:
+								</div>
+								<div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">{{buildOrder.room}}</div>
+							</div>
+							<div class="workshop-del">
+								<div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 workshop-addr">
+									Number of Seats:
+								</div>
+								<div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
+									{{buildOrder.noOfSeats}}
+								</div>
+							</div>
+							<div class="workshop-del">
+								<div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 workshop-addr">Available Seats:</div>
+								<div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">0</div>
+							</div>
+							<div class="workshop-del"> 
+								<div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 workshop-addr">Phone Number:
+								</div>
+								<div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
+								{{buildOrder.location.Phone}}</div>
+							</div>
+							
+							
+						</div>
 						<span ng-repeat="eventPrice in buildOrder.selectedPrice">
 							<span class="prod-price">{{eventPrice.Price | currency}}</span>
 						</span>
 						<p class="register">Choose a date to register for:</p>
-						<uib-accordion ng-init="buildOrder.limit=2">
-							<uib-accordion-group ng-repeat="(key, value) in buildOrder.fullEventsData track by $index" ng-if="($index < buildOrder.limit)">
+						<!-- <uib-accordion ng-init="buildOrder.limit=2"> -->
+						<uib-accordion>
+							<uib-accordion-group ng-repeat="(key, value) in buildOrder.fullEventsData track by $index">
 								<uib-accordion-heading>
 									<p><span class="events-img">
 									<svg class="plus" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve">
@@ -113,17 +151,17 @@
 										<li ng-repeat="eventslots in value track by $index" >
 										<div>
 											<input type="checkbox" id="{{key}}{{$index}}" ng-click="buildOrder.DisplayEvent(eventslots)" class="checkbox-custom" >
-											<label for="{{key}}{{$index}}" class="checkbox-custom-label">{{eventslots.xp.Slot}}</label>
+											<label for="{{key}}{{$index}}" class="checkbox-custom-label">{{eventslots.xp.SpecsOptions.Size}} - {{eventslots.xp.SpecsOptions.Color}}</label>
 										 </div>
 									   </li>
 									</ul>	
 								</div>
 							</uib-accordion-group>
-							<a ng-click="buildOrder.limit=buildOrder.eventsLimit.length" class="see-more" ng-if="buildOrder.limit!=buildOrder.eventsLimit.length">(See More Dates)</a>
+							<!-- <a ng-click="buildOrder.limit=buildOrder.eventsLimit.length" class="see-more" ng-if="buildOrder.limit!=buildOrder.eventsLimit.length">(See More Dates)</a> -->
 						</uib-accordion>
 					</div>
 					<!-- started -->
-					<div class="color-selection" ng-if="!buildOrder.hidePdpblock">
+					<div class="color-selection" ng-if="!buildOrder.IsWorkShopEvent">
 						<h5>Select Color</h5>
 						<div class="color-circle">
 							<ul class="list-inline">
@@ -148,9 +186,9 @@
 							<li>Comes with seat cushions</li>
 						</ul>
 					</div>
-					<button class="addCart" ng-if="buildOrder.hidePdpblock">REGISTER</button>
-					<button class="addCart" ng-click="AddtoCart(buildOrder.selectedProductId)" ng-if="!buildOrder.hidePdpblock">ADD TO CART</button>
-					<div class="dropdown-box" ng-if="!buildOrder.hidePdpblock">
+					<button class="addCart" ng-if="buildOrder.IsWorkShopEvent">REGISTER</button>
+					<button class="addCart" ng-click="AddtoCart(buildOrder.selectedProductId)" ng-if="!buildOrder.IsWorkShopEvent">ADD TO CART</button>
+					<div class="dropdown-box" ng-if="!buildOrder.IsWorkShopEvent">
 						<h5>Add Something Extra</h5>
 					<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 						<div class="row" >
@@ -186,7 +224,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="row faster-delivery-content" ng-if="buildOrder.hidePdpblock==false">
+				<div class="row faster-delivery-content" ng-if="!buildOrder.IsWorkShopEvent">
                                     <div class="assembly" ng-if="buildOrder.Assembly" ng-init="buildOrder.IsAssembly='Not Assembled'">
                                         <h5>Assembly:</h5>
 										<div class="radio-btn-container">
@@ -244,7 +282,7 @@
                                         <textarea placeholder="Placement Instruction" rows="4" cols="10" ng-model="buildOrder.PlacementInstruction"></textarea>
                                         <p class="note"><span>Note:&nbsp;</span>Placement Charges Will be applicable</p>
                                     </div>
-                                        <div class="fastDelivery" ng-if="!buildOrder.hidePdpblock && (buildOrder.Courier || buildOrder.Faster)">
+                                        <div class="fastDelivery" ng-if="!buildOrder.IsWorkShopEvent && (buildOrder.Courier || buildOrder.Faster)">
                                         <div class="radio-btn-container" ng-if="buildOrder.Faster">
 											<div class="size-box">
 												<input type="radio" id="fastDelivery" name="optradio1" ng-model="buildOrder.DeliveryType" value="Faster Delivery" />
@@ -271,7 +309,7 @@
                                     </div>
                                 </div>
 								
-						<div class="faster-location">
+						<div class="faster-location" ng-if="!buildOrder.IsWorkShopEvent">
 							<h5>Check Availability</h5>
 							<div class="side-block">
 								<p>Zip Code <span class="star">*</span></p>
@@ -325,10 +363,10 @@
 							<p class="delivery-success" style="color:red;" ng-if="buildOrder.DeliveryNotAvailable">Delivery Not Available To The Specified Zip...</p>
 							<p class="delivery-failure" style="color:green;" ng-if="buildOrder.DeliveryNotAvailable==false">Delivery Available...!</p>
 						</div>
-				<!-- <button class="addCart" ng-if="buildOrder.hidePdpblock">REGISTER</button>
-				<button class="addCart" ng-click="AddtoCart(buildOrder.selectedProductId)" ng-if="!buildOrder.hidePdpblock">ADD TO CART</button> -->
+				<!-- <button class="addCart" ng-if="buildOrder.IsWorkShopEvent">REGISTER</button>
+				<button class="addCart" ng-click="AddtoCart(buildOrder.selectedProductId)" ng-if="!buildOrder.IsWorkShopEvent">ADD TO CART</button> -->
 				</div>
-				<div class="key-product col-xs-12 p0" ng-if="buildOrder.hidePdpblock==false">
+				<div class="key-product col-xs-12 p0" ng-if="!buildOrder.IsWorkShopEvent">
 					<h3>Key Product Info:</h3>
 					<p class="row">
 						<div class="key-prod-info" ng-repeat="attribute in buildOrder.selectedKey">
@@ -387,7 +425,7 @@
 							</table>
 						</uib-accordion-group>
 
-						<uib-accordion-group is-open="status.open3" ng-if="buildOrder.hidePdpblock==false">
+						<uib-accordion-group is-open="status.open3" ng-if="!buildOrder.IsWorkShopEvent">
 							<uib-accordion-heading>
 								<p ng-class="{'footer-minus': status.open3, 'footer-plus': !status.open3}">Return/Warranty/Exchange:
 									<svg class="plus" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve">
@@ -406,7 +444,7 @@
 								
 							</div>
 						</uib-accordion-group>
-						<uib-accordion-group is-open="status.open4" ng-if="buildOrder.hidePdpblock">
+						<uib-accordion-group is-open="status.open4" ng-if="buildOrder.IsWorkShopEvent">
 							<uib-accordion-heading>
 								<p ng-class="{'footer-minus': status.open4, 'footer-plus': !status.open4}">Ticket Information:
 									<svg class="plus" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve">
@@ -427,7 +465,7 @@
 								</li>
 							</ul>
 						</uib-accordion-group>
-						<uib-accordion-group is-open="status.open5" ng-if="buildOrder.hidePdpblock">
+						<uib-accordion-group is-open="status.open5" ng-if="buildOrder.IsWorkShopEvent">
 							<uib-accordion-heading>
 								<p ng-class="{'footer-minus': status.open5, 'footer-plus': !status.open5}">Cancellation/Policies:
 									<svg class="plus" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve">
